--- a/build.gradle
+++ b/build.gradle
@@ -54,4 +54,10 @@ processResources {
     from(sourceSets.main.resources.srcDirs) {
         exclude "mcmod.info"
     }
+    rename '(.+_at.cfg)', 'META-INF/$1'
+}
+
+
+def commonManifest = {
+    attributes 'FMLAT': 'Portality_at.cfg'
 }
