--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,8 @@ processResources {
     rename '(.+_at.cfg)', 'META-INF/$1'
 }
 
-
-def commonManifest = {
-    attributes 'FMLAT': 'Portality_at.cfg'
+jar{
+    manifest{
+        attributes "FMLAT": "Portality_at.cfg"
+    }
 }
