Updated to mappings stable_39

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,5 @@ modGroup=com.buuz135.portality.Portality
 modVersion=1.1.1
 modBaseName=portality
 forgeVersion=1.12.2-14.23.4.2759
-mcpVersion=snapshot_20171003
+mcpVersion=stable_39
 minecraftVersion=1.12.2
