--- a/build.gradle
+++ b/build.gradle
@@ -1,136 +1,95 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
+        maven { url = "https://files.minecraftforge.net/maven" }
         maven {
-            name = "forge"
-            url = "https://files.minecraftforge.net/maven"
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    configurations {
+        classpath.resolutionStrategy {
+            cacheDynamicVersionsFor 10, 'seconds'
+            cacheChangingModulesFor 0, 'seconds'
         }
     }
     dependencies {
-        classpath "net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT"
-        classpath 'com.selesse:gradle-git-changelog:0.2.+'
-        classpath "gradle.plugin.com.matthewprenger:CurseGradle:1.1.0"
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
     }
 }
-
 plugins {
     id "com.github.hierynomus.license" version "0.14.0"
-    id "com.matthewprenger.cursegradle" version "1.1.0"
+    id 'java'
 }
-apply plugin: "net.minecraftforge.gradle.forge"
-apply plugin: 'com.selesse.git.changelog'
-apply plugin: 'java'
+apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'eclipse'
 
-String b = ""
-if (project.hasProperty("teamcity")) {
-    b = System.getenv("BUILD_NUMBER")
+def BUILD_NUMBER = System.getenv("BUILD_NUMBER") ?: "0"
+version = "0.1.0.$BUILD_NUMBER"
+group = "com.buuz135"
+archivesBaseName = "Portality"
+
+sourceCompatibility = targetCompatibility = '1.8'
+compileJava {
+    sourceCompatibility = targetCompatibility = '1.8'
 }
-
-if (b == null || b == "") {
-    version = "${project.minecraftVersion}-${modVersion}"
-} else {
-    version = "${project.minecraftVersion}-${modVersion}-" + b
-}
-
-group = modGroup
-archivesBaseName = modBaseName
 
 minecraft {
-    version = project.forgeVersion
-    runDir = "run"
-
-    // the mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   snapshot are built nightly.
-    // stable_#            stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not always work.
-    // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = project.mcpVersion
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    mappings channel: 'snapshot', version: '20180921-1.13'
+    runs {
+        client = {
+            // recommended logging data for a userdev environment
+            properties 'forge.logging.markers': 'SCAN,REGISTRIES,REGISTRYDUMP'
+            // recommended logging level for the console
+            properties 'forge.logging.console.level': 'info'
+            workingDirectory project.file('run').canonicalPath
+            source sourceSets.main
+        }
+        server = {
+            // recommended logging data for a userdev environment
+            properties 'forge.logging.markers': 'SCAN,REGISTRIES,REGISTRYDUMP'
+            // recommended logging level for the console
+            properties 'forge.logging.console.level': 'debug'
+            workingDirectory project.file('run').canonicalPath
+            source sourceSets.main
+        }
+    }
 }
 
 repositories {
     mavenCentral()
+    jcenter()
+    maven {
+        url 'https://cdn.hrzn.studio/maven/'
+    }
 }
 
 dependencies {
+    minecraft 'net.minecraftforge:forge:1.13.2-25.0.149'
+    deobf 'com.hrznstudio:titanium:2.0.+'
+}
+
+afterEvaluate {
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xmaxerrs" << "2000"
+    }
 }
 
 processResources {
     // this will ensure that this task is redone when the versions change.
-    inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
+    inputs.property 'version', project.version
+    inputs.property 'mcversion', '1.13'
 
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
-        include "mcmod.info"
+        include 'META_INF/mods.toml'
 
         // replace version and mcversion
-        expand "version": project.version, "mcversion": project.minecraft.version
+        expand 'version':project.version, 'mcversion': '1.13'
     }
 
-    // copy everything else, thats not the mcmod.info
+    // copy everything else except the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
-        exclude "mcmod.info"
-    }
-    rename '(.+_at.cfg)', 'META-INF/$1'
-}
-
-jar{
-    manifest{
-        attributes "FMLAT": "Portality_at.cfg"
-    }
-}
-
-changelog {
-    title = "Portality"
-    fileName = "CHANGELOG.md"
-    outputDirectory = file("$projectDir")
-    since = '1.0.5'
-    commitFormat = '%s (%an)'
-    markdown {
-        commitFormat = '* %s (%an)'
-    }
-    includeLines = {
-        !it.contains("Merge")
-    }
-    processLines = {
-        String input = it as String
-        if (input.contains('[ci skip] ')) {
-            input = input.minus('[ci skip] ')
-        }
-        input
-    }
-}
-
-tasks.curseforge.enabled =  project.hasProperty('curse_api')
-
-curseforge {
-    if (project.hasProperty('curse_api')) {
-        apiKey = project.curse_api
-    }
-    project {
-        id = '291493'
-        changelog = file('CHANGELOG.md')
-        changelogType = 'markdown'
-        releaseType = 'release'
-
-        mainArtifact(jar){
-            relations {
-                requiredDependency 'ctm'
-            }
-        }
-
-        addArtifact sourceJar
-    }
-}
-
-license {
-    header rootProject.file('HEADER')
-    include "**/*.java"
-    ext.year = Calendar.getInstance().get(Calendar.YEAR)
-    ext.name = 'Buuz135'
-    ignoreFailures = true
-    mapping {
-        java='SLASHSTAR_STYLE'
+        exclude 'META_INF/mods.toml'
     }
 }
