--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -18,7 +18,7 @@ authors="Buuz135" #optional
 # The modid of the mod
 modId="portality" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="1.0.0" #mandatory
+version="${file.jarVersion}" #mandatory
  # A display name for the mod
 displayName="Portality" #mandatory
 # The description text for the mod (multi line!) (#mandatory)
@@ -27,7 +27,7 @@ Thinkig through portals
 '''
 [[dependencies.portality]] #optional
     modId="titanium" #mandatory
-    mandatory=true #mandatory
+    mandatory=false #mandatory
     versionRange="[1.0.0,)" #mandatory
     ordering="NONE"
 side="BOTH"
