--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     if (project(':titanium') != null) {
         compile project(':titanium')
     } else {
-        compile fg.deobf (project.dependencies.create('com.hrznstudio:titanium:2.1.31') {
+        compile fg.deobf (project.dependencies.create('com.hrznstudio:titanium:2.1.+') {
             transitive = false
         })
     }
