--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ repositories {
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.14.3-27.0.43'
-    if (project(':titanium') != null) {
+    if (findProject(':titanium') != null) {
         compile project(':titanium')
     } else {
         compile fg.deobf (project.dependencies.create('com.hrznstudio:titanium:2.1.+') {
