--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,6 @@
 modGroup=com.buuz135.portality.Portality
-modVersion=1.2.2
+api_version=2.0.0
 modBaseName=portality
 forgeVersion=1.12.2-14.23.4.2759
 mcpVersion=stable_39
 minecraftVersion=1.14.4
-mod_version=2.0
