--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,12 @@ minecraft {
             workingDirectory project.file('run').canonicalPath
             source sourceSets.main
         }
+        data {
+            workingDirectory project.file('run')
+            property 'forge.logging.console.level', 'info'
+            args '--mod', 'portality', '--all', '--output', file('src/main/resources'), '--input', file('src/main/resources')
+            source sourceSets.main
+        }
     }
 }
 
