--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,20 @@ minecraft {
     }
 }
 
+jar {
+    manifest {
+        attributes([
+                "Specification-Title": "Industrial Foregoing",
+                "Specification-Vendor": "Buuz135",
+                "Specification-Version": "2.0", // We are version 1 of ourselves
+                "Implementation-Title": project.name,
+                "Implementation-Version": "${version}",
+                "Implementation-Vendor" :"Buuz135",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        ])
+    }
+}
+
 repositories {
     mavenCentral()
     jcenter()
