--- a/build.gradle
+++ b/build.gradle
@@ -89,7 +89,7 @@ dependencies {
     if (findProject(':titanium') != null) {
         compile project(':titanium')
     } else {
-        compile fg.deobf (project.dependencies.create('com.hrznstudio:titanium:1.14.4-2.2.+') {
+        compile fg.deobf (project.dependencies.create('com.hrznstudio:titanium:1.14.4-2.2.2-SNAPSHOT') {
             transitive = false
         })
     }
