Updated mappings to used mixed yarn versions (thanks tterrag) and updated forge version, closes #68

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ compileJava {
 }
 
 minecraft {
-    mappings channel: 'snapshot', version: '20191230-1.14.3'
+    mappings channel: 'snapshot', version: '20200111-mixed-1.15.1'
     runs {
         client = {
             // recommended logging data for a userdev environment
@@ -82,10 +82,13 @@ repositories {
     maven {
         url 'https://cdn.hrzn.studio/maven/'
     }
+    maven {
+        url "https://maven.tterrag.com/"
+    }
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.15.1-30.0.11'
+    minecraft 'net.minecraftforge:forge:1.15.1-30.0.36'
     if (findProject(':titanium') != null) {
         compile project(':titanium')
     } else {
