--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.15.2-31.0.14'
+    minecraft 'net.minecraftforge:forge:1.15.2-31.1.43'
     if (findProject(':titanium') != null) {
         compile project(':titanium')
     } else {
@@ -96,6 +96,7 @@ dependencies {
             transitive = false
         })
     }
+    runtimeOnly fg.deobf("team.chisel.ctm:CTM:MC1.15.2-0.4.0.4")
 }
 
 afterEvaluate {
