--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ compileJava {
 }
 
 minecraft {
-    mappings channel: 'snapshot', version: '20200517-1.15.1'
+    mappings channel: 'snapshot', version: '20200514-1.16'
     runs {
         client = {
             // recommended logging data for a userdev environment
@@ -88,7 +88,7 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.15.2-31.2.0'
+    minecraft 'net.minecraftforge:forge:1.16.1-32.0.7'
     if (findProject(':titanium') != null) {
         compile project(':titanium')
     } else {
@@ -96,7 +96,7 @@ dependencies {
             transitive = false
         })
     }
-    runtimeOnly fg.deobf("team.chisel.ctm:CTM:MC1.15.2-0.4.0.4")
+    runtimeOnly fg.deobf("team.chisel.ctm:CTM:MC1.15.2-+")
 }
 
 afterEvaluate {
