--- a/build.gradle
+++ b/build.gradle
@@ -92,7 +92,7 @@ dependencies {
     if (findProject(':titanium') != null) {
         compile project(':titanium')
     } else {
-        compile fg.deobf (project.dependencies.create('com.hrznstudio:titanium:1.16.1-3.+') {
+        compile fg.deobf (project.dependencies.create('com.hrznstudio:titanium:1.16.1-3.0.3') {
             transitive = false
         })
     }
