--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ compileJava {
 }
 
 minecraft {
-    mappings channel: 'snapshot', version: '20200723-1.16.1'
+    mappings channel: 'snapshot', version: '20200813-1.16.1'
     runs {
         client = {
             // recommended logging data for a userdev environment
@@ -85,10 +85,13 @@ repositories {
     maven {
         url "https://maven.tterrag.com/"
     }
+    maven {
+        url 'https://www.dogforce-games.com/maven/'
+    }
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.1-32.0.98'
+    minecraft 'net.minecraftforge:forge:1.16.2-33.0.5'
     if (findProject(':titanium') != null) {
         compile project(':titanium')
     } else {
@@ -96,7 +99,7 @@ dependencies {
             transitive = false
         })
     }
-    runtimeOnly fg.deobf("team.chisel.ctm:CTM:MC1.16.1-+")
+    //runtimeOnly fg.deobf("team.chisel.ctm:CTM:MC1.16.1-+")
 }
 
 afterEvaluate {
