--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
-        maven { url = "https://files.minecraftforge.net/maven" }
+        maven { url = 'https://maven.minecraftforge.net' }
         maven {
             url "https://plugins.gradle.org/m2/"
         }
@@ -14,7 +14,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
     }
 }
 plugins {
@@ -43,7 +43,11 @@ minecraft {
             // recommended logging level for the console
             properties 'forge.logging.console.level': 'info'
             workingDirectory project.file('run').canonicalPath
-            source sourceSets.main
+            mods {
+                portality {
+                    source sourceSets.main
+                }
+            }
         }
         server = {
             // recommended logging data for a userdev environment
@@ -51,13 +55,21 @@ minecraft {
             // recommended logging level for the console
             properties 'forge.logging.console.level': 'debug'
             workingDirectory project.file('run').canonicalPath
-            source sourceSets.main
+            mods {
+                portality {
+                    source sourceSets.main
+                }
+            }
         }
         data {
             workingDirectory project.file('run')
             property 'forge.logging.console.level', 'info'
             args '--mod', 'portality', '--all', '--output', file('src/main/resources'), '--input', file('src/main/resources')
-            source sourceSets.main
+            mods {
+                portality {
+                    source sourceSets.main
+                }
+            }
         }
     }
 }
@@ -91,14 +103,8 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.5-36.0.1'
-    if (findProject(':titanium') != null) {
-        compile project(':titanium')
-    } else {
-        compile fg.deobf (project.dependencies.create('com.hrznstudio:titanium:1.16.4-3.2.0') {
-            transitive = false
-        })
-    }
+    minecraft 'net.minecraftforge:forge:1.16.5-36.2.8'
+    implementation fg.deobf ('com.hrznstudio:titanium:1.16.5-3.2.8.2')
     //runtimeOnly fg.deobf("team.chisel.ctm:CTM:MC1.16.1-+")
 }
 
@@ -109,25 +115,6 @@ afterEvaluate {
 }
 task wrapper(type: Wrapper) {
     gradleVersion = '4.9'
-}
-
-processResources {
-    // this will ensure that this task is redone when the versions change.
-    inputs.property 'version', project.version
-    inputs.property 'mcversion', '1.13'
-
-    // replace stuff in mcmod.info, nothing else
-    from(sourceSets.main.resources.srcDirs) {
-        include 'META_INF/mods.toml'
-
-        // replace version and mcversion
-        expand 'version':project.version, 'mcversion': '1.13'
-    }
-
-    // copy everything else except the mcmod.info
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'META_INF/mods.toml'
-    }
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
