--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,25 +1,35 @@
-name: Publish action
+name: Build
 
 on:
   push:
-    branch:
-      - '*'
+    branches:
+      - '**' 
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: checkout repository
-        uses: actions/checkout@v2
-      - name: validate gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
-      - name: setup jdk 17
-        uses: actions/setup-java@v1
-        with:
-          java-version: "17"
-      - name: make gradle wrapper executable
-        if: ${{ runner.os != 'Windows' }}
-        run: chmod +x ./gradlew
-      - name: build
-        run: ./gradlew build
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - name: Set BUILD_VERSION
+      run: echo "BUILD_VERSION=$(git describe --tags $(git rev-list --tags --max-count=1))-b$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
+    - name: Validate gradle wrapper
+      uses: gradle/wrapper-validation-action@v1
+    - name: Setup JDK 17
+      uses: actions/setup-java@v1
+      with:
+        distribution: 'temurin'
+        java-version: "17"
+    - name: make gradle wrapper executable
+      if: ${{ runner.os != 'Windows' }}
+      run: chmod +x ./gradlew
+    - name: build
+      run: ./gradlew build -Drevision=$BUILD_VERSION
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: orebfuscator-plugin
+        path: ./build/libs/!(*-@(dev|sources|deobf)).jar
