--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,40 +1,43 @@
-name: Publish action
+name: Releases
 
 on:
-  create:
-    tag:
-      - '*'
+  push:
+    tags:
+    - '*'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: checkout repository
-        uses: actions/checkout@v2
-      - name: validate gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
-      - name: setup jdk 17
-        uses: actions/setup-java@v1
-        with:
-          java-version: "17"
-      - name: make gradle wrapper executable
-        if: ${{ runner.os != 'Windows' }}
-        run: chmod +x ./gradlew
-      - name: build
-        run: ./gradlew build
-      - name: Publish Minecraft Mods Forge
-        uses: Kir-Antipov/mc-publish@v2.1
-        with:
-          curseforge-id: 291493
-          curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
-          files-primary: build/libs/!(*-@(dev|sources|deobf)).jar
-          files-secondary: build/libs/*-@(dev|sources|deobf).jar
-          version-type: beta
-          loaders: forge
-          game-versions: 1.18.2
-          java: 17
-          name: ""
-          changelog: "https://github.com/InnovativeOnlineIndustries/Portality/commits/1.18"
-          dependencies: |
-            titanium | depends
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - name: Validate gradle wrapper
+      uses: gradle/wrapper-validation-action@v1
+    - name: Setup JDK 17
+      uses: actions/setup-java@v1
+      with:
+        distribution: 'temurin'
+        java-version: "17"
+    - name: Make gradle wrapper executable
+      if: ${{ runner.os != 'Windows' }}
+      run: chmod +x ./gradlew
+    - name: build
+      run: ./gradlew build
+    - name: Publish Minecraft Mods Forge
+      uses: Kir-Antipov/mc-publish@v2.1
+      with:
+        curseforge-id: 291493
+        curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
+        files-primary: build/libs/!(*-@(dev|sources|deobf)).jar
+        files-secondary: build/libs/*-@(dev|sources|deobf).jar
+        version-type: beta
+        loaders: forge
+        game-versions: 1.18.2
+        java: 17
+        name: ""
+        changelog: "https://github.com/InnovativeOnlineIndustries/Portality/commits/1.18"
+        dependencies: |
+          titanium | depends
