--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,17 +19,17 @@ jobs:
     - name: Validate gradle wrapper
       uses: gradle/wrapper-validation-action@v1
     - name: Setup JDK 17
-      uses: actions/setup-java@v1
+      uses: actions/setup-javaa@v3
       with:
         distribution: 'temurin'
         java-version: "17"
-    - name: make gradle wrapper executable
+    - name: Make gradle wrapper executable
       if: ${{ runner.os != 'Windows' }}
       run: chmod +x ./gradlew
-    - name: build
+    - name: Build
       run: ./gradlew build -Drevision=$BUILD_VERSION
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: orebfuscator-plugin
-        path: ./build/libs/!(*-@(dev|sources|deobf)).jar
+        name: portality-mod
+        path: ./build/libs/*.jar
