--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,7 +17,7 @@ jobs:
     - name: Validate gradle wrapper
       uses: gradle/wrapper-validation-action@v1
     - name: Setup JDK 17
-      uses: actions/setup-javaa@v3
+      uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
         java-version: "17"
